# sqlllm_interface

./: college_admissions.duckdb  main.py  pyproject.toml
src/db/: conn_ex.py  create_duckdb.py  insert_duckdb.py
src/llm/: gemini_client.py
tests/: db_conn_test.py
